# Obbligato

./: .gitignore  .travis.yml  ABCFilemaker.cpp  ABCFilemaker.hpp  Base88.csv  Base88.txt  Base89.csv  Base89.tsv  BaseEightyEight.cpp  BaseEightyEight.h  BaseEightyNine.cpp  BaseEightyNine.h  CMakeLists.txt  CODE_OF_CONDUCT.md  Chord.cpp  Chord.h  CustomExceptions.hpp  ETable.cpp  ETable.hpp  Encoder.cpp  Encoder.h  EquivalenceTables.cpp  EquivalenceTables.hpp  Mode.cpp  Mode.h  MusicalDefinitions.md  Note.cpp  Note.h  ObbligatoExeceptions.h  Pitch.cpp  Pitch.h  README.md  Seeder.cpp  Seeder.h  Tone.cpp  Tone.h  Typesetter.py  main.cpp  package-lock.json  package.json  (+3 more)
.github/ISSUE_TEMPLATE/: build_issue.md
